syntax = "proto3";

message AccelerometerTimestamp {
    double timestamp = 1;
    double xAcceleration = 2;
    double yAcceleration = 3;
    double zAcceleration = 4;

}

message DepthData {
    repeated float depthValues = 1;
}

message AccelerometerSeries {
    repeated AccelerometerTimestamp measurements = 1;
}

